services_and_networking/ingress/ingress-by-hostname.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch-host
spec:
  rules:
    - host: wear.my-online-store.com
      http:
        paths:
        - backend:
            service:
              name: wear-service
              port: 
                number: 80
          pathType: ImplementationSpecific
    - host: watch.my-online-store.com
      http:
        paths:
        - backend:
            service:
              name: watch-service
              port: 
                number: 80
          pathType: ImplementationSpecific
