services_and_networking/ingress/ingress-by-url.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch-url
spec:
  rules:
  - http:
      paths:
      - path: /wear
        pathType: ImplementationSpecific
        backend:
          service:
            name: wear-service
            port: 
              number: 80
      - path: /watch
        pathType: ImplementationSpecific
        backend:
          service:
            name: watch-service
            port:
              number: 80
